--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,10 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+dev_legacydb:
+  adapter: postgresql
+  database: 
+  username:  
+  password:  
+  host: 
